<resources>
    <string name="app_name">Github Search</string>
    bottom navigation menu
    <string name="title_home">Home</string>
    <string name="title_userInfo">User Information</string>
    <string name="title_favourite">Favourites</string>
    <string name="title_settings">Settings</string>
    login fragment
    <string name="login_login">Log in</string>
    toolbar menu
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_signOut">Sign out</string>
    tabs names
    <string name="tab_title_user">User</string>
    <string name="tab_title_contact">Contact</string>
    <string name="tab_title_languages">Language</string>
    <string name="tab_title_stars">Stars</string>
    tab user search fragment
    <string name="user_search_search">Search User</string>
    <string name="user_search_hint">Username</string>
    <string name="user_search_enterUsername">Enter a github username</string>
    tab user info
    <string name="tab_user_info_welcome">Welcome</string>
    <string name="tab_user_info_user_avatarImg">User Avatar</string>
    <string name="tab_user_info_user_number_of_reposImg">Number of repos</string>
    <string name="tab_user_info_user_number_of_followersImg">Number of followers</string>
    <string name="tab_user_info_user_followingImg">Following number</string>
    <string name="tab_user_info_favorite">Favorite</string>
    <string name="tab_user_info_unfavorite">Unfavorite</string>
    tab user info set text values
    <string name="tab_user_info_setText_repos">Repos</string>
    <string name="tab_user_info_setText_followers">Followers</string>
    <string name="tab_user_info_setText_following">Following</string>
    tab user contact
    <string name="tab_user_contactImg">User Avatar</string>
    <string name="tab_user_contact_blogImg">User blog</string>
    <string name="tab_user_contact_locationImg">User location</string>
    <string name="tab_user_contact_companyImg">User company</string>
    favorite fragment
    <string name="favorite_button">Search</string>
    img descriptions
    <string name="img_octocat">An image of github\'s octocat</string>
    <string name="img_github_logo">Github\'s logo</string>
</resources>