<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.githubsearchandroid.ui.userSearch.UserSearchFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_user_search"/>

    <fragment
        android:id="@+id/navigation_userInfo"
        android:name="com.example.githubsearchandroid.ui.userInfo.UserInfoFragment"
        android:label="@string/title_userInfo"
        tools:layout="@layout/fragment_user_info"/>

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.example.githubsearchandroid.ui.favourite.FavouriteFragment"
        android:label="@string/title_favourite"
        tools:layout="@layout/fragment_favourite"/>
</navigation>